- fixes on portfolio page - added some info on mobile app

--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -99,6 +99,7 @@
         opacity: 0.5;
         background: url('../../assets/handsome.png') no-repeat bottom center;
         background-size: 100%; 
+        max-width: 700px;
         height: 200px;
 
         @include mobile-min {
